Added more commonly used languages to Translate feature
Added (in alphabetical order):
- German
- Hindi
- Polish
- Portuguese (BR)

Removed:
- Korean (since not commonly used in PS2 modding sphere)

--- a/_data/translate_langs.yml
+++ b/_data/translate_langs.yml
@@ -1,6 +1,10 @@
 # Translate languages
 # langs refer to https://cloud.google.com/translate/docs/languages
 
+- lang: zh-CN
+  img: https://cdn.countryflags.com/thumbs/china/flag-400.png
+  text: Chinese (Simplified)
+  
 - lang: en
   img: https://cdn.countryflags.com/thumbs/united-states-of-america/flag-400.png
   text: English
@@ -9,18 +13,26 @@
   img: https://cdn.countryflags.com/thumbs/france/flag-400.png
   text: French
 
-- lang: zh-CN
-  img: https://cdn.countryflags.com/thumbs/china/flag-400.png
-  text: Chinese(Simple)
-
+- lang: de
+  img: https://cdn.countryflags.com/thumbs/germany/flag-400.png
+  text: German
+  
+- lang: hi
+  img: https://cdn.countryflags.com/thumbs/india/flag-400.png
+  text: Hindi
+  
 - lang: ja
   img: https://cdn.countryflags.com/thumbs/japan/flag-400.png
   text: Japanese
 
-- lang: ko
-  img: https://cdn.countryflags.com/thumbs/south-korea/flag-400.png
-  text: Korean
+- lang: pl
+  img: https://cdn.countryflags.com/thumbs/poland/flag-400.png
+  text: Polish
 
+- lang: pt-BR
+  img: https://cdn.countryflags.com/thumbs/brazil/flag-400.png
+  text: Portuguese
+  
 - lang: ru
   img: https://cdn.countryflags.com/thumbs/russia/flag-400.png
   text: Russian
