--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ night_mode: "on"
 header_pages:
   - about.html
   - get_started.html
-  - homebrew.html
+  - links_and_sources.html
   - categories.html
   - tags.html
   - archives.html
