--- a/.github/ISSUE_TEMPLATE/post--factual-error.yml
+++ b/.github/ISSUE_TEMPLATE/post--factual-error.yml
@@ -7,7 +7,7 @@ assignees:
   - koraxial
 body:
 - type: checkboxes
-    id: checks
+    id: checkbox
     validations:
       required: true
     attributes:
