--- a/.github/ISSUE_TEMPLATE/post--factual-error.yml
+++ b/.github/ISSUE_TEMPLATE/post--factual-error.yml
@@ -1,6 +1,5 @@
 name: Post- Factual Error
-description: Open this when a post has a factual error like missing context or outdated
-  or wrong information.
+description: Open this when a post has a factual error like missing context or outdated or wrong information.
 title: "[Post Link:] "
 labels: [documentation, factual-error]
 assignees:
