--- a/.github/ISSUE_TEMPLATE/post--factual-error.yml
+++ b/.github/ISSUE_TEMPLATE/post--factual-error.yml
@@ -1,4 +1,4 @@
-name: Post has Factual Error
+name: Post has a factual error
 description: Open this when a post has a factual error like missing context or outdated or wrong information.
 title: "[Post Link:] "
 labels: [documentation, factual-error]
