--- a/.github/ISSUE_TEMPLATE/post-factual-error.yml
+++ b/.github/ISSUE_TEMPLATE/post-factual-error.yml
@@ -1,9 +1,8 @@
 name: Post has a factual error
 description: Open this when a post has a factual error like missing context or outdated or wrong information.
-title: "[Post Link:] "
-labels: [documentation, factual-error]
-assignees:
-  - koraxial
+title: "[Post Link]: "
+labels: [factual-error]
+assignees: "koraxial"
 body:
 - type: checkboxes
   id: checkbox
