--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ header_transparent: true
 
 # Google analytics - GA4
  google_analytics: G-NW7W22XNC2
-# enableDNT: "false"
+ enableDNT: "false"
 
 # If you want to generate website sitemap, you can set true
 # sitemap: false
