--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ header_transparent: true
 # content_width: "920px"
 
 # Google analytics - GA4
- google_analytics: G-NW7W22XNC2
- enableDNT: "false"
+# google_analytics: G-NW7W22XNC2
+# enableDNT: "false"
 
 # If you want to generate website sitemap, you can set true
 # sitemap: false
