--- a/_config.yml
+++ b/_config.yml
@@ -64,14 +64,14 @@ header_transparent: true
 # content_width: "920px"
 
 # Google analytics - GA4
-# google_analytics: G-NW7W22XNC2
-# enableDNT: "false"
+ google_analytics: G-NW7W22XNC2
+ enableDNT: "false"
 
 # If you want to generate website sitemap, you can set true
-# sitemap: false
+ sitemap: false
 
 # If you want to change site language, you can set lang option
-# lang: "en"  # default lang is en
+ lang: "en"  # default lang is en
 
 # Translate languges
 # langs refer to https://cloud.google.com/translate/docs/languages
