--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ google_analytics: "G-NW7W22XNC2"
 enableDNT: "false"
 
 # If you want to generate website sitemap, you can set true
-sitemap: false
+sitemap: true
 
 # If you want to change site language, you can set lang option
 lang: "en"  # default lang is en
