--- a/_config.yml
+++ b/_config.yml
@@ -229,12 +229,12 @@ header_pages:
 # See https://utteranc.es/
 # set follow_site_theme true to make utterances' theme follow the site's
 
-# utterances:
-#   repo: "owner/repo"
-#   issue_term: "title"
-#   label: "utterances comment"
-#   theme: "github-light"
-#   follow_site_theme: true
+utterances:
+  repo: "ps2wiki/comments"
+  issue_term: "pathname"
+  label: "utterances comment"
+  theme: "github-dark"
+  follow_site_theme: true
 
 # Build settings
 # highlighter: none
