--- a/_config.yml
+++ b/_config.yml
@@ -231,7 +231,7 @@ header_pages:
 # set follow_site_theme true to make utterances' theme follow the site's
 
 utterances:
-  repo: "ps2wiki/comments"
+  repo: "ps2wiki/PS2Wiki-Comments"
   issue_term: "pathname"
   label: "utterances comment"
   theme: "github-dark"
