--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ps2wiki.github.io" # the base hostname & protocol for your site, e.g. https://example.com
-favicon: "favicons/favicon.ico" # the favicon for your site
+favicon: "assets/favicons/favicon.ico" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
