--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@
 # in the templates via {{ site.myvariable }}.
 #
 title: PS2Wiki
-email: --
 author: The PS2Wiki Team
+email: --
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -45,7 +45,7 @@ copyright: "(c) {currentYear} {author}"
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to The PS2 Homebrew Wiki! Whether you're a beginner or a seasoned modder, our tutorials have you covered with easy-to-follow guides on everything PS2! 
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blogkrx
 url: "https://ps2wiki.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 favicon: "assets/favicons/favicon.ico" # the favicon for your site
 
