--- a/_config.yml
+++ b/_config.yml
@@ -250,7 +250,8 @@ plugins:
   - jekyll-paginate
   - jekyll-spaceship
 
-relative_permalinks: false
+# Inclusions
+include: [ '/archive/', '/documentation/ ]
 
 # Exclusions
 exclude: [ 'README.md', 'LICENSE', 'Yat_Theme_MITLicense.txt' ]
