--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ favicon: "/assets/favicons/favicon.ico" # the favicon for your site
 yat:
   date_format: "%b %d, %Y"
 
+timezone: Asia/Kolkata
 # If you want more debug log, you can set true
 # debug: false
 
